--- a/PGY-2 Calendar.html
+++ b/PGY-2 Calendar.html
@@ -364,7 +364,7 @@
     </div>
 
     <script>
-        // Schedule data based on your spreadsheet
+        // Schedule data
         const scheduleData = {
             'Benrubi': {
                 '2025-07-01': 'TGH NCC', '2025-07-20': 'VA JR', '2025-08-10': 'TGH Elective', '2025-08-31': 'TGH Gen',
