--- a/PGY-2 Calendar.html
+++ b/PGY-2 Calendar.html
@@ -428,7 +428,7 @@
         let filteredResident = '';
         let filteredRotation = '';
 
-        // Set the end date for the residency program
+        // Set the end date
         const PROGRAM_END_DATE = new Date('2026-06-30');
         
         // Initialize the calendar
